Update to Java 24